--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                         </small>
                                     </div>
                                     <div class="form-group">
-                                        <label for="name">Ваше имя*</label>
+                                        <label for="name">Ваше имямя*</label>
                                         <input type="text" class="form-control" id="name" required>
                                     </div>
                                     <div class="form-group form-check">
